--- a/WebDev/week1/Assignment (div)/styles.css
+++ b/WebDev/week1/Assignment (div)/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: Inter,Arial, sans-serif;
 }
 
 .page {
@@ -50,6 +50,32 @@ hr {
     border-radius: 12px;
     background-color: #fff;
 }
+
+.google-btn {
+    display: flex;
+    align-items: center;
+    justify-content:flex-start;
+    gap:95px;
+
+    padding: 10px;
+    border-radius: 8px;
+    border: 1px solid #ddd;
+    background-color: #fff;
+
+    font-size: 14px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.google-btn:hover {
+    background-color: #f5f5f5;
+}
+
+.google-icon{
+    display: flex;
+}
+
+
 
 label {
     text-align: left;
